--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ figcaption {
     text-align: center;
 }
 
+li {
+    font-size: larger;
+}
+
 a.active {
     color: red;
     text-decoration: none;
