better background colors

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
 * {
-    background-color: #1fa859;
+    background-color: #58d98e;
 }
 
 header {
-    background-color: #1fa8a3;
+    background-color: #39cec9;
     padding: 3%;
 }
 
 footer {
-    background-color: #1fa8a3;
+    background-color: #39cec9;
     padding: 1%;
 }
 
